plugins {
	// https://maven.architectury.dev/ for new versions
	id 'dev.architectury.loom' version '1.10-SNAPSHOT' apply false
}

allprojects {
	group = "fi.dy.masa"
	version = findProperty("mod_version") ?: "0.21.61"
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'maven-publish'

	tasks.withType(JavaCompile).configureEach {
		it.options.encoding = "UTF-8"
		it.options.release = 17
	}

	java {
		sourceCompatibility = JavaVersion.VERSION_17
		targetCompatibility = JavaVersion.VERSION_17
		withSourcesJar()
	}
}
